@@ -1,6 +1,11 @@
 
 
 5.0
+* Help/about popup dialog
+* Links on embed object tags ( not possible on div tags, needs to change it )
+* IE7 and possibly also ie6 feaks out on inline customtags (when you inser or update html)
+* update translations
+
 
 
 
