@@ -88,8 +88,8 @@
         theme_advanced_toolbar_floating : true,
     	theme_advanced_resize_horizontal : false,
     	theme_advanced_resizing : true,
-    	valid_elements: "-strong/-b/-bold[class],-em/-i/-emphasize[class],pre[class|title|customattributes],ol[class],ul[class],li,a/link[href|target=_blank|title|class|id],p/paragraph[class],anchor[name],img[src|class|alt|align|inline|id|customattributes],table[class|border|width|id|title|customattributes|ezborder|bordercolor],tr,th[class|width|rowspan|colspan],td[class|width|rowspan|colspan],h1,h2,h3,h4,h5,h6,br",
-    	valid_child_elements: "h1/h2/h3/h4/h5/h6/a/link[%itrans_na],table[tr],tr[td|th],pre/strong/b/p/div/em/i/td/th[%itrans|#text]",
+    	valid_elements: "-strong/-b/-bold[class|customattributes],-em/-i/-emphasize[class|customattributes],span[type|class|title|customattributes],pre[class|title|customattributes],ol[class|customattributes],ul[class|customattributes],li,a[href|name|target|title|class|id|customattributes],p[class|customattributes],img[src|class|alt|align|inline|id|customattributes],table[class|border|width|id|title|customattributes|ezborder|bordercolor],tr,th[class|width|rowspan|colspan|customattributes],td[class|width|rowspan|colspan|customattributes],h1,h2,h3,h4,h5,h6,br",
+    	valid_child_elements: "a[%itrans_na],table[tr],tr[td|th],h1/h2/h3/h4/h5/h6/pre/strong/b/p/em/i/u[%itrans|#text]span/div/pre/td/th[%btrans|%itrans|#text]",
     	cleanup : false,
     	cleanup_serializer : 'xml',	
     	entity_encoding : 'raw',
